--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-dom": "^17.0.2",
     "react-loading": "^2.0.3",
     "react-router-dom": "^6.2.2",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^4.0.3",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4",
     "web3": "^1.7.1"
